--- a/guide/styleguide.css
+++ b/guide/styleguide.css
@@ -5,6 +5,7 @@
 :root {
   --color-second: teal;
   --color-third: orange;
+  --color-third-text: black;
 }
 
 #rsg-root {
@@ -13,10 +14,8 @@
   }
 
   [class*='rsg--preview-'] {
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.035) 1px, transparent 1px),
-      linear-gradient(rgba(0, 0, 0, 0.035) 1px, transparent 1px);
-    background-size: 16px 16px;
-    background-position: center;
+    padding: 0;
+    overflow: hidden;
   }
 
   [class*='rsg--pathline-'] {
@@ -63,21 +62,22 @@
 
   [class*='rsg--code-'] {
     font-size: 90%;
-    background: rgba(0, 0, 0, 0.06);
+    background: var(--color-grey-trans-80);
     border-radius: 5px;
     padding: 0.2em 0.4em;
     font-weight: var(--font-weight-medium);
+    white-space: nowrap;
   }
 
   [class*='rsg--table-'] {
     & tr {
       &:nth-child(even) {
-        background-color: #f9f9f9;
+        background-color: var(--color-grey-white-90);
       }
     }
 
     [class*='rsg--tableHead-'] {
-      background-color: #f5f5f5;
+      background-color: var(--color-grey-white-80);
       border: none;
     }
 
