--- a/src/styles/react-simple-star-rating/base.css
+++ b/src/styles/react-simple-star-rating/base.css
@@ -1,3 +1,7 @@
+:root {
+  --color-rate: hsl(43, 100%, 50%);
+}
+
 .react-simple-star-rating {
   display: block !important;
 
@@ -16,10 +20,10 @@
   }
 
   .empty-icons {
-    color: var(--color-grey-800) !important;
+    color: var(--rate-empty-color, var(--color-grey-black-70, grey)) !important;
   }
 
   .filled-icons {
-    color: var(--color-rate) !important;
+    color: var(--rate-color, orange) !important;
   }
 }
