--- a/src/elements/Checkbox/styles/base.css
+++ b/src/elements/Checkbox/styles/base.css
@@ -5,14 +5,14 @@
 }
 
 .checkbox {
-  --visible-size: 1.1em;
-  --background-color: rgba(255, 255, 255, 0.25);
-  --border-color: var(--color-grey-white-70);
+  --icon-size: 1.1em;
+  --icon-background-color: rgba(255, 255, 255, 0.25);
+  --icon-border-color: var(--color-grey-white-70);
 
   position: relative;
   display: flex;
   margin: 0;
-  gap: 10px;
+  gap: 0.5em;
   font-size: var(--font-size-base);
   line-height: 1.3em;
   color: inherit;
@@ -49,165 +49,165 @@
 .checkbox__input {
   font-size: inherit;
   position: absolute;
-  width: var(--visible-size);
-  height: var(--visible-size);
+  width: var(--icon-size);
+  height: var(--icon-size);
   margin: 0;
   opacity: 0;
 }
 
-.checkbox__visible {
+.checkbox__icon {
   position: relative;
-  width: var(--visible-size);
-  height: var(--visible-size);
+  width: var(--icon-size);
+  height: var(--icon-size);
   flex-shrink: 0;
   display: flex;
   align-items: center;
   justify-content: center;
   color: white;
-  background-color: var(--background-color);
+  background-color: var(--icon-background-color);
   background-position: center;
   background-size: 50%;
   background-repeat: no-repeat;
-  border: 1.5px solid var(--border-color);
+  border: 1.5px solid var(--icon-border-color);
   border-radius: 3px;
   cursor: pointer;
 
   /* default state */
 
   .checkbox:not(._disabled):hover & {
-    --background-color: var(--color-first-trans-90);
-    --border-color: var(--color-first);
+    --icon-background-color: var(--color-first-trans-90);
+    --icon-border-color: var(--color-first);
 
     &._color-grey {
-      --background-color: var(--color-grey-trans-90);
-      --border-color: var(--color-grey);
+      --icon-background-color: var(--color-grey-trans-90);
+      --icon-border-color: var(--color-grey);
     }
 
     &._color-second {
-      --background-color: var(--color-second-trans-90);
-      --border-color: var(--color-second);
+      --icon-background-color: var(--color-second-trans-90);
+      --icon-border-color: var(--color-second);
     }
 
     &._color-third {
-      --background-color: var(--color-third-trans-90);
-      --border-color: var(--color-third);
+      --icon-background-color: var(--color-third-trans-90);
+      --icon-border-color: var(--color-third);
     }
 
     &._color-success {
-      --background-color: var(--color-success-trans-90);
-      --border-color: var(--color-success);
+      --icon-background-color: var(--color-success-trans-90);
+      --icon-border-color: var(--color-success);
     }
 
     &._color-error {
-      --background-color: var(--color-error-trans-90);
-      --border-color: var(--color-error);
+      --icon-background-color: var(--color-error-trans-90);
+      --icon-border-color: var(--color-error);
     }
   }
 
   .checkbox:not(._disabled):active & {
-    --background-color: var(--color-first-trans-80);
-    --border-color: var(--color-first);
+    --icon-background-color: var(--color-first-trans-80);
+    --icon-border-color: var(--color-first);
 
     &._color-grey {
-      --background-color: var(--color-grey-trans-80);
-      --border-color: var(--color-grey);
+      --icon-background-color: var(--color-grey-trans-80);
+      --icon-border-color: var(--color-grey);
     }
 
     &._color-second {
-      --background-color: var(--color-second-trans-80);
-      --border-color: var(--color-second);
+      --icon-background-color: var(--color-second-trans-80);
+      --icon-border-color: var(--color-second);
     }
 
     &._color-third {
-      --background-color: var(--color-third-trans-80);
-      --border-color: var(--color-third);
+      --icon-background-color: var(--color-third-trans-80);
+      --icon-border-color: var(--color-third);
     }
 
     &._color-success {
-      --background-color: var(--color-success-trans-80);
-      --border-color: var(--color-success);
+      --icon-background-color: var(--color-success-trans-80);
+      --icon-border-color: var(--color-success);
     }
 
     &._color-error {
-      --background-color: var(--color-error-trans-80);
-      --border-color: var(--color-error);
+      --icon-background-color: var(--color-error-trans-80);
+      --icon-border-color: var(--color-error);
     }
   }
 
   /* checked state */
 
   .checkbox._checked & {
-    --background-color: var(--color-first);
-    --border-color: transparent;
+    --icon-background-color: var(--color-first);
+    --icon-border-color: transparent;
 
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='white' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
 
     &._color-grey {
-      --background-color: var(--color-grey);
+      --icon-background-color: var(--color-grey);
     }
 
     &._color-second {
-      --background-color: var(--color-second);
+      --icon-background-color: var(--color-second);
     }
 
     &._color-third {
-      --background-color: var(--color-third);
+      --icon-background-color: var(--color-third);
     }
 
     &._color-success {
-      --background-color: var(--color-success);
+      --icon-background-color: var(--color-success);
     }
 
     &._color-error {
-      --background-color: var(--color-error);
+      --icon-background-color: var(--color-error);
     }
   }
 
   .checkbox._checked:not(._disabled):hover & {
-    --background-color: var(--color-first-trans-10);
+    --icon-background-color: var(--color-first-trans-10);
 
     &._color-grey {
-      --background-color: var(--color-grey-trans-10);
+      --icon-background-color: var(--color-grey-trans-10);
     }
 
     &._color-second {
-      --background-color: var(--color-second-trans-10);
+      --icon-background-color: var(--color-second-trans-10);
     }
 
     &._color-third {
-      --background-color: var(--color-third-trans-10);
+      --icon-background-color: var(--color-third-trans-10);
     }
 
     &._color-success {
-      --background-color: var(--color-success-trans-10);
+      --icon-background-color: var(--color-success-trans-10);
     }
 
     &._color-error {
-      --background-color: var(--color-error-trans-10);
+      --icon-background-color: var(--color-error-trans-10);
     }
   }
 
   .checkbox._checked:not(._disabled):active & {
-    --background-color: var(--color-first-trans-20);
+    --icon-background-color: var(--color-first-trans-20);
 
     &._color-grey {
-      --background-color: var(--color-grey-trans-20);
+      --icon-background-color: var(--color-grey-trans-20);
     }
 
     &._color-second {
-      --background-color: var(--color-second-trans-20);
+      --icon-background-color: var(--color-second-trans-20);
     }
 
     &._color-third {
-      --background-color: var(--color-third-trans-20);
+      --icon-background-color: var(--color-third-trans-20);
     }
 
     &._color-success {
-      --background-color: var(--color-success-trans-20);
+      --icon-background-color: var(--color-success-trans-20);
     }
 
     &._color-error {
-      --background-color: var(--color-error-trans-20);
+      --icon-background-color: var(--color-error-trans-20);
     }
   }
 
@@ -216,13 +216,12 @@
   .checkbox._invalid &,
   .checkbox._invalid:hover &,
   .checkbox._invalid:active & {
-    --border-color: var(--color-error);
+    --icon-border-color: var(--color-error);
   }
 }
 
 .checkbox__title {
   color: currentColor;
-  cursor: pointer;
   flex-grow: 1;
   margin-top: -0.125em;
 
@@ -241,5 +240,5 @@
   stroke-width: 2.5;
   animation: checkbox-spinner 1.5s infinite;
   color: var(--color-first);
-  width: var(--visible-size);
+  width: var(--icon-size);
 }
