--- a/src/elements/Button/styles/base.css
+++ b/src/elements/Button/styles/base.css
@@ -31,7 +31,7 @@
   gap: 0.625em;
 
   line-height: 1.3;
-  font-family: var(--font-family-base);
+  font-family: var(--control-font-family);
   font-weight: var(--font-weight-medium);
   font-size: var(--control-font-size);
   padding: var(--control-padding);
@@ -65,7 +65,7 @@
 
   &:disabled {
     pointer-events: none;
-    opacity: 0.75;
+    opacity: 0.6;
   }
 
   .feather {
