--- a/src/elements/Button/styles/colors/error.css
+++ b/src/elements/Button/styles/colors/error.css
@@ -1,23 +1,175 @@
-@import './error-black.css';
-@import './error-white.css';
-@import './error-trans.css';
-
 /* button--error */
 
 .button--error {
-  --back-color: var(--color-error);
-  --text-color: var(--color-error-text);
-  --border-color: transparent;
+  --this-text-color: var(--color-error-text);
+  --this-background-color: var(--color-error);
+  --this-hover-background-color: var(--color-error-black-10);
+}
 
-  &:hover {
-    --back-color: var(--color-error-black-10);
-    --text-color: var(--color-error-text);
-    --border-color: transparent;
-  }
+/* button--error-black */
 
-  &:active {
-    --back-color: var(--color-error);
-    --text-color: var(--color-error-text);
-    --border-color: transparent;
-  }
+.button--error-black-10 {
+  --this-text-color: var(--color-error-text);
+  --this-background-color: var(--color-error-black-10);
+  --this-hover-background-color: var(--color-error-black-20);
+}
+
+.button--error-black-20 {
+  --this-text-color: var(--color-error-text);
+  --this-background-color: var(--color-error-black-20);
+  --this-hover-background-color: var(--color-error-black-30);
+}
+
+.button--error-black-30 {
+  --this-text-color: var(--color-error-text);
+  --this-background-color: var(--color-error-black-30);
+  --this-hover-background-color: var(--color-error-black-40);
+}
+
+.button--error-black-40 {
+  --this-text-color: white;
+  --this-background-color: var(--color-error-black-40);
+  --this-hover-background-color: var(--color-error-black-50);
+}
+
+.button--error-black-50 {
+  --this-text-color: white;
+  --this-background-color: var(--color-error-black-50);
+  --this-hover-background-color: var(--color-error-black-60);
+}
+
+.button--error-black-60 {
+  --this-text-color: white;
+  --this-background-color: var(--color-error-black-60);
+  --this-hover-background-color: var(--color-error-black-70);
+}
+
+.button--error-black-70 {
+  --this-text-color: white;
+  --this-background-color: var(--color-error-black-70);
+  --this-hover-background-color: var(--color-error-black-80);
+}
+
+.button--error-black-80 {
+  --this-text-color: white;
+  --this-background-color: var(--color-error-black-80);
+  --this-hover-background-color: var(--color-error-black-90);
+}
+
+.button--error-black-90 {
+  --this-text-color: white;
+  --this-background-color: var(--color-error-black-90);
+  --this-hover-background-color: black;
+}
+
+/* button--error-white */
+
+.button--error-white-10 {
+  --this-text-color: var(--color-error-text);
+  --this-background-color: var(--color-error-white-10);
+  --this-hover-background-color: var(--color-error);
+}
+
+.button--error-white-20 {
+  --this-text-color: var(--color-error-text);
+  --this-background-color: var(--color-error-white-20);
+  --this-hover-background-color: var(--color-error-white-10);
+}
+
+.button--error-white-30 {
+  --this-text-color: var(--color-error-text);
+  --this-background-color: var(--color-error-white-30);
+  --this-hover-background-color: var(--color-error-white-20);
+}
+
+.button--error-white-40 {
+  --this-text-color: var(--body-text-color);
+  --this-background-color: var(--color-error-white-40);
+  --this-hover-background-color: var(--color-error-white-30);
+}
+
+.button--error-white-50 {
+  --this-text-color: var(--body-text-color);
+  --this-background-color: var(--color-error-white-50);
+  --this-hover-background-color: var(--color-error-white-40);
+}
+
+.button--error-white-60 {
+  --this-text-color: var(--body-text-color);
+  --this-background-color: var(--color-error-white-60);
+  --this-hover-background-color: var(--color-error-white-50);
+}
+
+.button--error-white-70 {
+  --this-text-color: var(--body-text-color);
+  --this-background-color: var(--color-error-white-70);
+  --this-hover-background-color: var(--color-error-white-60);
+}
+
+.button--error-white-80 {
+  --this-text-color: var(--body-text-color);
+  --this-background-color: var(--color-error-white-80);
+  --this-hover-background-color: var(--color-error-white-70);
+}
+
+.button--error-white-90 {
+  --this-text-color: var(--body-text-color);
+  --this-background-color: var(--color-error-white-90);
+  --this-hover-background-color: var(--color-error-white-80);
+}
+
+/* button--error-trans */
+
+.button--error-trans-10 {
+  --this-text-color: var(--color-error-text);
+  --this-background-color: var(--color-error-trans-10);
+  --this-hover-background-color: var(--color-error);
+}
+
+.button--error-trans-20 {
+  --this-text-color: var(--color-error-text);
+  --this-background-color: var(--color-error-trans-20);
+  --this-hover-background-color: var(--color-error-trans-10);
+}
+
+.button--error-trans-30 {
+  --this-text-color: var(--color-error-text);
+  --this-background-color: var(--color-error-trans-30);
+  --this-hover-background-color: var(--color-error-trans-20);
+}
+
+.button--error-trans-40 {
+  --this-text-color: inherit;
+  --this-background-color: var(--color-error-trans-40);
+  --this-hover-background-color: var(--color-error-trans-30);
+}
+
+.button--error-trans-50 {
+  --this-text-color: inherit;
+  --this-background-color: var(--color-error-trans-50);
+  --this-hover-background-color: var(--color-error-trans-40);
+}
+
+.button--error-trans-60 {
+  --this-text-color: inherit;
+  --this-background-color: var(--color-error-trans-60);
+  --this-hover-background-color: var(--color-error-trans-50);
+}
+
+.button--error-trans-70 {
+  --this-text-color: inherit;
+  --this-background-color: var(--color-error-trans-70);
+  --this-hover-background-color: var(--color-error-trans-60);
+}
+
+.button--error-trans-80 {
+  --this-text-color: inherit;
+  --this-background-color: var(--color-error-trans-80);
+  --this-hover-background-color: var(--color-error-trans-70);
+}
+
+.button--error-trans-90 {
+  --this-text-color: inherit;
+  --this-background-color: var(--color-error-trans-90);
+  --this-hover-background-color: var(--color-error-trans-80);
 }
