--- a/src/elements/Button/styles/colors/first.css
+++ b/src/elements/Button/styles/colors/first.css
@@ -1,23 +1,175 @@
-@import './first-black.css';
-@import './first-white.css';
-@import './first-trans.css';
-
 /* button--first */
 
 .button--first {
-  --back-color: var(--color-first);
-  --text-color: var(--color-first-text);
-  --border-color: transparent;
+  --this-text-color: var(--color-first-text);
+  --this-background-color: var(--color-first);
+  --this-hover-background-color: var(--color-first-black-10);
+}
 
-  &:hover {
-    --back-color: var(--color-first-black-10);
-    --text-color: var(--color-first-text);
-    --border-color: transparent;
-  }
+/* button--first-black */
 
-  &:active {
-    --back-color: var(--color-first);
-    --text-color: var(--color-first-text);
-    --border-color: transparent;
-  }
+.button--first-black-10 {
+  --this-text-color: var(--color-first-text);
+  --this-background-color: var(--color-first-black-10);
+  --this-hover-background-color: var(--color-first-black-20);
+}
+
+.button--first-black-20 {
+  --this-text-color: var(--color-first-text);
+  --this-background-color: var(--color-first-black-20);
+  --this-hover-background-color: var(--color-first-black-30);
+}
+
+.button--first-black-30 {
+  --this-text-color: var(--color-first-text);
+  --this-background-color: var(--color-first-black-30);
+  --this-hover-background-color: var(--color-first-black-40);
+}
+
+.button--first-black-40 {
+  --this-text-color: white;
+  --this-background-color: var(--color-first-black-40);
+  --this-hover-background-color: var(--color-first-black-50);
+}
+
+.button--first-black-50 {
+  --this-text-color: white;
+  --this-background-color: var(--color-first-black-50);
+  --this-hover-background-color: var(--color-first-black-60);
+}
+
+.button--first-black-60 {
+  --this-text-color: white;
+  --this-background-color: var(--color-first-black-60);
+  --this-hover-background-color: var(--color-first-black-70);
+}
+
+.button--first-black-70 {
+  --this-text-color: white;
+  --this-background-color: var(--color-first-black-70);
+  --this-hover-background-color: var(--color-first-black-80);
+}
+
+.button--first-black-80 {
+  --this-text-color: white;
+  --this-background-color: var(--color-first-black-80);
+  --this-hover-background-color: var(--color-first-black-90);
+}
+
+.button--first-black-90 {
+  --this-text-color: white;
+  --this-background-color: var(--color-first-black-90);
+  --this-hover-background-color: black;
+}
+
+/* button--first-white */
+
+.button--first-white-10 {
+  --this-text-color: var(--color-first-text);
+  --this-background-color: var(--color-first-white-10);
+  --this-hover-background-color: var(--color-first);
+}
+
+.button--first-white-20 {
+  --this-text-color: var(--color-first-text);
+  --this-background-color: var(--color-first-white-20);
+  --this-hover-background-color: var(--color-first-white-10);
+}
+
+.button--first-white-30 {
+  --this-text-color: var(--color-first-text);
+  --this-background-color: var(--color-first-white-30);
+  --this-hover-background-color: var(--color-first-white-20);
+}
+
+.button--first-white-40 {
+  --this-text-color: var(--body-text-color);
+  --this-background-color: var(--color-first-white-40);
+  --this-hover-background-color: var(--color-first-white-30);
+}
+
+.button--first-white-50 {
+  --this-text-color: var(--body-text-color);
+  --this-background-color: var(--color-first-white-50);
+  --this-hover-background-color: var(--color-first-white-40);
+}
+
+.button--first-white-60 {
+  --this-text-color: var(--body-text-color);
+  --this-background-color: var(--color-first-white-60);
+  --this-hover-background-color: var(--color-first-white-50);
+}
+
+.button--first-white-70 {
+  --this-text-color: var(--body-text-color);
+  --this-background-color: var(--color-first-white-70);
+  --this-hover-background-color: var(--color-first-white-60);
+}
+
+.button--first-white-80 {
+  --this-text-color: var(--body-text-color);
+  --this-background-color: var(--color-first-white-80);
+  --this-hover-background-color: var(--color-first-white-70);
+}
+
+.button--first-white-90 {
+  --this-text-color: var(--body-text-color);
+  --this-background-color: var(--color-first-white-90);
+  --this-hover-background-color: var(--color-first-white-80);
+}
+
+/* button--first-trans */
+
+.button--first-trans-10 {
+  --this-text-color: var(--color-first-text);
+  --this-background-color: var(--color-first-trans-10);
+  --this-hover-background-color: var(--color-first);
+}
+
+.button--first-trans-20 {
+  --this-text-color: var(--color-first-text);
+  --this-background-color: var(--color-first-trans-20);
+  --this-hover-background-color: var(--color-first-trans-10);
+}
+
+.button--first-trans-30 {
+  --this-text-color: var(--color-first-text);
+  --this-background-color: var(--color-first-trans-30);
+  --this-hover-background-color: var(--color-first-trans-20);
+}
+
+.button--first-trans-40 {
+  --this-text-color: inherit;
+  --this-background-color: var(--color-first-trans-40);
+  --this-hover-background-color: var(--color-first-trans-30);
+}
+
+.button--first-trans-50 {
+  --this-text-color: inherit;
+  --this-background-color: var(--color-first-trans-50);
+  --this-hover-background-color: var(--color-first-trans-40);
+}
+
+.button--first-trans-60 {
+  --this-text-color: inherit;
+  --this-background-color: var(--color-first-trans-60);
+  --this-hover-background-color: var(--color-first-trans-50);
+}
+
+.button--first-trans-70 {
+  --this-text-color: inherit;
+  --this-background-color: var(--color-first-trans-70);
+  --this-hover-background-color: var(--color-first-trans-60);
+}
+
+.button--first-trans-80 {
+  --this-text-color: inherit;
+  --this-background-color: var(--color-first-trans-80);
+  --this-hover-background-color: var(--color-first-trans-70);
+}
+
+.button--first-trans-90 {
+  --this-text-color: inherit;
+  --this-background-color: var(--color-first-trans-90);
+  --this-hover-background-color: var(--color-first-trans-80);
 }
