--- a/src/elements/Button/styles/colors/grey.css
+++ b/src/elements/Button/styles/colors/grey.css
@@ -1,23 +1,175 @@
-@import './grey-black.css';
-@import './grey-white.css';
-@import './grey-trans.css';
-
 /* button--grey */
 
 .button--grey {
-  --back-color: var(--color-grey);
-  --text-color: var(--color-grey-text);
-  --border-color: transparent;
+  --this-text-color: var(--color-grey-text);
+  --this-background-color: var(--color-grey);
+  --this-hover-background-color: var(--color-grey-black-10);
+}
 
-  &:hover {
-    --back-color: var(--color-grey-black-10);
-    --text-color: var(--color-grey-text);
-    --border-color: transparent;
-  }
+/* button--grey-black */
 
-  &:active {
-    --back-color: var(--color-grey);
-    --text-color: var(--color-grey-text);
-    --border-color: transparent;
-  }
+.button--grey-black-10 {
+  --this-text-color: var(--color-grey-text);
+  --this-background-color: var(--color-grey-black-10);
+  --this-hover-background-color: var(--color-grey-black-20);
+}
+
+.button--grey-black-20 {
+  --this-text-color: var(--color-grey-text);
+  --this-background-color: var(--color-grey-black-20);
+  --this-hover-background-color: var(--color-grey-black-30);
+}
+
+.button--grey-black-30 {
+  --this-text-color: var(--color-grey-text);
+  --this-background-color: var(--color-grey-black-30);
+  --this-hover-background-color: var(--color-grey-black-40);
+}
+
+.button--grey-black-40 {
+  --this-text-color: white;
+  --this-background-color: var(--color-grey-black-40);
+  --this-hover-background-color: var(--color-grey-black-50);
+}
+
+.button--grey-black-50 {
+  --this-text-color: white;
+  --this-background-color: var(--color-grey-black-50);
+  --this-hover-background-color: var(--color-grey-black-60);
+}
+
+.button--grey-black-60 {
+  --this-text-color: white;
+  --this-background-color: var(--color-grey-black-60);
+  --this-hover-background-color: var(--color-grey-black-70);
+}
+
+.button--grey-black-70 {
+  --this-text-color: white;
+  --this-background-color: var(--color-grey-black-70);
+  --this-hover-background-color: var(--color-grey-black-80);
+}
+
+.button--grey-black-80 {
+  --this-text-color: white;
+  --this-background-color: var(--color-grey-black-80);
+  --this-hover-background-color: var(--color-grey-black-90);
+}
+
+.button--grey-black-90 {
+  --this-text-color: white;
+  --this-background-color: var(--color-grey-black-90);
+  --this-hover-background-color: black;
+}
+
+/* button--grey-white */
+
+.button--grey-white-10 {
+  --this-text-color: var(--color-grey-text);
+  --this-background-color: var(--color-grey-white-10);
+  --this-hover-background-color: var(--color-grey);
+}
+
+.button--grey-white-20 {
+  --this-text-color: var(--color-grey-text);
+  --this-background-color: var(--color-grey-white-20);
+  --this-hover-background-color: var(--color-grey-white-10);
+}
+
+.button--grey-white-30 {
+  --this-text-color: var(--color-grey-text);
+  --this-background-color: var(--color-grey-white-30);
+  --this-hover-background-color: var(--color-grey-white-20);
+}
+
+.button--grey-white-40 {
+  --this-text-color: var(--body-text-color);
+  --this-background-color: var(--color-grey-white-40);
+  --this-hover-background-color: var(--color-grey-white-30);
+}
+
+.button--grey-white-50 {
+  --this-text-color: var(--body-text-color);
+  --this-background-color: var(--color-grey-white-50);
+  --this-hover-background-color: var(--color-grey-white-40);
+}
+
+.button--grey-white-60 {
+  --this-text-color: var(--body-text-color);
+  --this-background-color: var(--color-grey-white-60);
+  --this-hover-background-color: var(--color-grey-white-50);
+}
+
+.button--grey-white-70 {
+  --this-text-color: var(--body-text-color);
+  --this-background-color: var(--color-grey-white-70);
+  --this-hover-background-color: var(--color-grey-white-60);
+}
+
+.button--grey-white-80 {
+  --this-text-color: var(--body-text-color);
+  --this-background-color: var(--color-grey-white-80);
+  --this-hover-background-color: var(--color-grey-white-70);
+}
+
+.button--grey-white-90 {
+  --this-text-color: var(--body-text-color);
+  --this-background-color: var(--color-grey-white-90);
+  --this-hover-background-color: var(--color-grey-white-80);
+}
+
+/* button--grey-trans */
+
+.button--grey-trans-10 {
+  --this-text-color: var(--color-grey-text);
+  --this-background-color: var(--color-grey-trans-10);
+  --this-hover-background-color: var(--color-grey);
+}
+
+.button--grey-trans-20 {
+  --this-text-color: var(--color-grey-text);
+  --this-background-color: var(--color-grey-trans-20);
+  --this-hover-background-color: var(--color-grey-trans-10);
+}
+
+.button--grey-trans-30 {
+  --this-text-color: var(--color-grey-text);
+  --this-background-color: var(--color-grey-trans-30);
+  --this-hover-background-color: var(--color-grey-trans-20);
+}
+
+.button--grey-trans-40 {
+  --this-text-color: inherit;
+  --this-background-color: var(--color-grey-trans-40);
+  --this-hover-background-color: var(--color-grey-trans-30);
+}
+
+.button--grey-trans-50 {
+  --this-text-color: inherit;
+  --this-background-color: var(--color-grey-trans-50);
+  --this-hover-background-color: var(--color-grey-trans-40);
+}
+
+.button--grey-trans-60 {
+  --this-text-color: inherit;
+  --this-background-color: var(--color-grey-trans-60);
+  --this-hover-background-color: var(--color-grey-trans-50);
+}
+
+.button--grey-trans-70 {
+  --this-text-color: inherit;
+  --this-background-color: var(--color-grey-trans-70);
+  --this-hover-background-color: var(--color-grey-trans-60);
+}
+
+.button--grey-trans-80 {
+  --this-text-color: inherit;
+  --this-background-color: var(--color-grey-trans-80);
+  --this-hover-background-color: var(--color-grey-trans-70);
+}
+
+.button--grey-trans-90 {
+  --this-text-color: inherit;
+  --this-background-color: var(--color-grey-trans-90);
+  --this-hover-background-color: var(--color-grey-trans-80);
 }
