--- a/src/elements/Button/styles/colors/second.css
+++ b/src/elements/Button/styles/colors/second.css
@@ -1,23 +1,175 @@
-@import './second-black.css';
-@import './second-white.css';
-@import './second-trans.css';
-
 /* button--second */
 
 .button--second {
-  --back-color: var(--color-second);
-  --text-color: var(--color-second-text);
-  --border-color: transparent;
+  --this-text-color: var(--color-second-text);
+  --this-background-color: var(--color-second);
+  --this-hover-background-color: var(--color-second-black-10);
+}
 
-  &:hover {
-    --back-color: var(--color-second-black-10);
-    --text-color: var(--color-second-text);
-    --border-color: transparent;
-  }
+/* button--second-black */
 
-  &:active {
-    --back-color: var(--color-second);
-    --text-color: var(--color-second-text);
-    --border-color: transparent;
-  }
+.button--second-black-10 {
+  --this-text-color: var(--color-second-text);
+  --this-background-color: var(--color-second-black-10);
+  --this-hover-background-color: var(--color-second-black-20);
+}
+
+.button--second-black-20 {
+  --this-text-color: var(--color-second-text);
+  --this-background-color: var(--color-second-black-20);
+  --this-hover-background-color: var(--color-second-black-30);
+}
+
+.button--second-black-30 {
+  --this-text-color: var(--color-second-text);
+  --this-background-color: var(--color-second-black-30);
+  --this-hover-background-color: var(--color-second-black-40);
+}
+
+.button--second-black-40 {
+  --this-text-color: white;
+  --this-background-color: var(--color-second-black-40);
+  --this-hover-background-color: var(--color-second-black-50);
+}
+
+.button--second-black-50 {
+  --this-text-color: white;
+  --this-background-color: var(--color-second-black-50);
+  --this-hover-background-color: var(--color-second-black-60);
+}
+
+.button--second-black-60 {
+  --this-text-color: white;
+  --this-background-color: var(--color-second-black-60);
+  --this-hover-background-color: var(--color-second-black-70);
+}
+
+.button--second-black-70 {
+  --this-text-color: white;
+  --this-background-color: var(--color-second-black-70);
+  --this-hover-background-color: var(--color-second-black-80);
+}
+
+.button--second-black-80 {
+  --this-text-color: white;
+  --this-background-color: var(--color-second-black-80);
+  --this-hover-background-color: var(--color-second-black-90);
+}
+
+.button--second-black-90 {
+  --this-text-color: white;
+  --this-background-color: var(--color-second-black-90);
+  --this-hover-background-color: black;
+}
+
+/* button--second-white */
+
+.button--second-white-10 {
+  --this-text-color: var(--color-second-text);
+  --this-background-color: var(--color-second-white-10);
+  --this-hover-background-color: var(--color-second);
+}
+
+.button--second-white-20 {
+  --this-text-color: var(--color-second-text);
+  --this-background-color: var(--color-second-white-20);
+  --this-hover-background-color: var(--color-second-white-10);
+}
+
+.button--second-white-30 {
+  --this-text-color: var(--color-second-text);
+  --this-background-color: var(--color-second-white-30);
+  --this-hover-background-color: var(--color-second-white-20);
+}
+
+.button--second-white-40 {
+  --this-text-color: var(--body-text-color);
+  --this-background-color: var(--color-second-white-40);
+  --this-hover-background-color: var(--color-second-white-30);
+}
+
+.button--second-white-50 {
+  --this-text-color: var(--body-text-color);
+  --this-background-color: var(--color-second-white-50);
+  --this-hover-background-color: var(--color-second-white-40);
+}
+
+.button--second-white-60 {
+  --this-text-color: var(--body-text-color);
+  --this-background-color: var(--color-second-white-60);
+  --this-hover-background-color: var(--color-second-white-50);
+}
+
+.button--second-white-70 {
+  --this-text-color: var(--body-text-color);
+  --this-background-color: var(--color-second-white-70);
+  --this-hover-background-color: var(--color-second-white-60);
+}
+
+.button--second-white-80 {
+  --this-text-color: var(--body-text-color);
+  --this-background-color: var(--color-second-white-80);
+  --this-hover-background-color: var(--color-second-white-70);
+}
+
+.button--second-white-90 {
+  --this-text-color: var(--body-text-color);
+  --this-background-color: var(--color-second-white-90);
+  --this-hover-background-color: var(--color-second-white-80);
+}
+
+/* button--second-trans */
+
+.button--second-trans-10 {
+  --this-text-color: var(--color-second-text);
+  --this-background-color: var(--color-second-trans-10);
+  --this-hover-background-color: var(--color-second);
+}
+
+.button--second-trans-20 {
+  --this-text-color: var(--color-second-text);
+  --this-background-color: var(--color-second-trans-20);
+  --this-hover-background-color: var(--color-second-trans-10);
+}
+
+.button--second-trans-30 {
+  --this-text-color: var(--color-second-text);
+  --this-background-color: var(--color-second-trans-30);
+  --this-hover-background-color: var(--color-second-trans-20);
+}
+
+.button--second-trans-40 {
+  --this-text-color: inherit;
+  --this-background-color: var(--color-second-trans-40);
+  --this-hover-background-color: var(--color-second-trans-30);
+}
+
+.button--second-trans-50 {
+  --this-text-color: inherit;
+  --this-background-color: var(--color-second-trans-50);
+  --this-hover-background-color: var(--color-second-trans-40);
+}
+
+.button--second-trans-60 {
+  --this-text-color: inherit;
+  --this-background-color: var(--color-second-trans-60);
+  --this-hover-background-color: var(--color-second-trans-50);
+}
+
+.button--second-trans-70 {
+  --this-text-color: inherit;
+  --this-background-color: var(--color-second-trans-70);
+  --this-hover-background-color: var(--color-second-trans-60);
+}
+
+.button--second-trans-80 {
+  --this-text-color: inherit;
+  --this-background-color: var(--color-second-trans-80);
+  --this-hover-background-color: var(--color-second-trans-70);
+}
+
+.button--second-trans-90 {
+  --this-text-color: inherit;
+  --this-background-color: var(--color-second-trans-90);
+  --this-hover-background-color: var(--color-second-trans-80);
 }
