--- a/src/elements/Button/styles/colors/third.css
+++ b/src/elements/Button/styles/colors/third.css
@@ -1,23 +1,175 @@
-@import './third-black.css';
-@import './third-white.css';
-@import './third-trans.css';
-
 /* button--third */
 
 .button--third {
-  --back-color: var(--color-third);
-  --text-color: var(--color-third-text);
-  --border-color: transparent;
+  --this-text-color: var(--color-third-text);
+  --this-background-color: var(--color-third);
+  --this-hover-background-color: var(--color-third-black-10);
+}
 
-  &:hover {
-    --back-color: var(--color-third-black-10);
-    --text-color: var(--color-third-text);
-    --border-color: transparent;
-  }
+/* button--third-black */
 
-  &:active {
-    --back-color: var(--color-third);
-    --text-color: var(--color-third-text);
-    --border-color: transparent;
-  }
+.button--third-black-10 {
+  --this-text-color: var(--color-third-text);
+  --this-background-color: var(--color-third-black-10);
+  --this-hover-background-color: var(--color-third-black-20);
+}
+
+.button--third-black-20 {
+  --this-text-color: var(--color-third-text);
+  --this-background-color: var(--color-third-black-20);
+  --this-hover-background-color: var(--color-third-black-30);
+}
+
+.button--third-black-30 {
+  --this-text-color: var(--color-third-text);
+  --this-background-color: var(--color-third-black-30);
+  --this-hover-background-color: var(--color-third-black-40);
+}
+
+.button--third-black-40 {
+  --this-text-color: white;
+  --this-background-color: var(--color-third-black-40);
+  --this-hover-background-color: var(--color-third-black-50);
+}
+
+.button--third-black-50 {
+  --this-text-color: white;
+  --this-background-color: var(--color-third-black-50);
+  --this-hover-background-color: var(--color-third-black-60);
+}
+
+.button--third-black-60 {
+  --this-text-color: white;
+  --this-background-color: var(--color-third-black-60);
+  --this-hover-background-color: var(--color-third-black-70);
+}
+
+.button--third-black-70 {
+  --this-text-color: white;
+  --this-background-color: var(--color-third-black-70);
+  --this-hover-background-color: var(--color-third-black-80);
+}
+
+.button--third-black-80 {
+  --this-text-color: white;
+  --this-background-color: var(--color-third-black-80);
+  --this-hover-background-color: var(--color-third-black-90);
+}
+
+.button--third-black-90 {
+  --this-text-color: white;
+  --this-background-color: var(--color-third-black-90);
+  --this-hover-background-color: black;
+}
+
+/* button--third-white */
+
+.button--third-white-10 {
+  --this-text-color: var(--color-third-text);
+  --this-background-color: var(--color-third-white-10);
+  --this-hover-background-color: var(--color-third);
+}
+
+.button--third-white-20 {
+  --this-text-color: var(--color-third-text);
+  --this-background-color: var(--color-third-white-20);
+  --this-hover-background-color: var(--color-third-white-10);
+}
+
+.button--third-white-30 {
+  --this-text-color: var(--color-third-text);
+  --this-background-color: var(--color-third-white-30);
+  --this-hover-background-color: var(--color-third-white-20);
+}
+
+.button--third-white-40 {
+  --this-text-color: var(--body-text-color);
+  --this-background-color: var(--color-third-white-40);
+  --this-hover-background-color: var(--color-third-white-30);
+}
+
+.button--third-white-50 {
+  --this-text-color: var(--body-text-color);
+  --this-background-color: var(--color-third-white-50);
+  --this-hover-background-color: var(--color-third-white-40);
+}
+
+.button--third-white-60 {
+  --this-text-color: var(--body-text-color);
+  --this-background-color: var(--color-third-white-60);
+  --this-hover-background-color: var(--color-third-white-50);
+}
+
+.button--third-white-70 {
+  --this-text-color: var(--body-text-color);
+  --this-background-color: var(--color-third-white-70);
+  --this-hover-background-color: var(--color-third-white-60);
+}
+
+.button--third-white-80 {
+  --this-text-color: var(--body-text-color);
+  --this-background-color: var(--color-third-white-80);
+  --this-hover-background-color: var(--color-third-white-70);
+}
+
+.button--third-white-90 {
+  --this-text-color: var(--body-text-color);
+  --this-background-color: var(--color-third-white-90);
+  --this-hover-background-color: var(--color-third-white-80);
+}
+
+/* button--third-trans */
+
+.button--third-trans-10 {
+  --this-text-color: var(--color-third-text);
+  --this-background-color: var(--color-third-trans-10);
+  --this-hover-background-color: var(--color-third);
+}
+
+.button--third-trans-20 {
+  --this-text-color: var(--color-third-text);
+  --this-background-color: var(--color-third-trans-20);
+  --this-hover-background-color: var(--color-third-trans-10);
+}
+
+.button--third-trans-30 {
+  --this-text-color: var(--color-third-text);
+  --this-background-color: var(--color-third-trans-30);
+  --this-hover-background-color: var(--color-third-trans-20);
+}
+
+.button--third-trans-40 {
+  --this-text-color: inherit;
+  --this-background-color: var(--color-third-trans-40);
+  --this-hover-background-color: var(--color-third-trans-30);
+}
+
+.button--third-trans-50 {
+  --this-text-color: inherit;
+  --this-background-color: var(--color-third-trans-50);
+  --this-hover-background-color: var(--color-third-trans-40);
+}
+
+.button--third-trans-60 {
+  --this-text-color: inherit;
+  --this-background-color: var(--color-third-trans-60);
+  --this-hover-background-color: var(--color-third-trans-50);
+}
+
+.button--third-trans-70 {
+  --this-text-color: inherit;
+  --this-background-color: var(--color-third-trans-70);
+  --this-hover-background-color: var(--color-third-trans-60);
+}
+
+.button--third-trans-80 {
+  --this-text-color: inherit;
+  --this-background-color: var(--color-third-trans-80);
+  --this-hover-background-color: var(--color-third-trans-70);
+}
+
+.button--third-trans-90 {
+  --this-text-color: inherit;
+  --this-background-color: var(--color-third-trans-90);
+  --this-hover-background-color: var(--color-third-trans-80);
 }
