--- a/src/elements/CheckboxSmart/styles/base.css
+++ b/src/elements/CheckboxSmart/styles/base.css
@@ -1,268 +1,146 @@
-@keyframes checkbox-spinner {
+@keyframes checkbox-smart-spinner {
   100% {
     transform: rotate(180deg);
   }
 }
 
 .checkbox-smart {
-  --icon-size: 1.1em;
-  --icon-background-color: rgba(255, 255, 255, 0.25);
-  --icon-border-color: var(--control-border-color);
-  --element-border-color: var(--control-border-color);
+  --this-font-size: var(--font-size-base);
+  --this-icon-size: 1.1em;
+  --this-padding-inline: 1em;
+  --this-padding-block: 0.75em;
+
+  --this-spinner-color: var(--color-first);
+  --this-background-color: var(--control-background-color);
+
+  --unchecked-border-color: var(--control-border-color);
+  --checked-border-color: var(--color-first);
+
+  --unchecked-icon-background-color: var(--control-background-color);
+  --unchecked-icon-border-color: var(--control-border-color);
+
+  --unchecked-hover-icon-background-color: var(--color-first-trans-90);
+  --unchecked-hover-icon-border-color: var(--color-first);
+
+  --unchecked-active-icon-background-color: var(--color-first-trans-80);
+  --unchecked-active-icon-border-color: var(--color-first);
+
+  --checked-icon-background-color: var(--color-first);
+  --checked-icon-border-color: var(--color-first);
+
+  --checked-hover-icon-background-color: var(--color-first-trans-10);
+  --checked-hover-icon-border-color: var(--color-first);
+
+  --checked-active-icon-background-color: var(--color-first-trans-20);
+  --checked-active-icon-border-color: var(--color-first);
 
   position: relative;
   display: inline-flex;
   align-items: flex-start;
   margin: 0;
-  padding: 0.75em 1em;
+  padding-inline: var(--this-padding-inline);
+  padding-block: var(--this-padding-block);
   gap: 0.5em;
-  font-size: var(--font-size-base);
+  font-size: var(--this-font-size);
   line-height: 1.3em;
-  color: var(--control-text-color);
+  color: var(--body-text-color);
   cursor: pointer;
   border-style: solid;
   border-width: var(--control-border-width);
   border-radius: var(--control-border-radius);
-  border-color: var(--element-border-color);
-  background-color: var(--control-background-color);
-
-  &._checked {
-    --element-border-color: var(--color-first);
-    outline: 1px solid var(--element-border-color);
-    outline-offset: 0;
-
-    &.checkbox-smart--grey {
-      --element-border-color: var(--color-grey);
-    }
-
-    &.checkbox-smart--second {
-      --element-border-color: var(--color-second);
-    }
-
-    &.checkbox-smart--third {
-      --element-border-color: var(--color-third);
-    }
-
-    &.checkbox-smart--success {
-      --element-border-color: var(--color-success);
-    }
-
-    &.checkbox-smart--error {
-      --element-border-color: var(--color-error);
-    }
-  }
-
-  &._disabled {
-    opacity: 0.6;
-    pointer-events: none;
-  }
-
-  &._waiting {
-    cursor: default;
-    pointer-events: none;
-  }
+  border-color: var(--unchecked-border-color);
+  background-color: var(--this-background-color);
 }
 
-.checkbox-smart--micro {
-  font-size: var(--font-size-micro);
+.checkbox-smart--checked {
+  border-color: var(--checked-border-color);
+  outline: 1px solid var(--checked-border-color);
+  outline-offset: 0;
 }
 
-.checkbox-smart--small {
-  font-size: var(--font-size-small);
+.checkbox-smart--disabled {
+  opacity: 0.6;
+  pointer-events: none;
 }
 
-.checkbox-smart--large {
-  font-size: var(--font-size-large);
-}
-
-.checkbox-smart--extra {
-  font-size: var(--font-size-extra);
+.checkbox-smart--waiting {
+  cursor: default;
+  pointer-events: none;
 }
 
 .checkbox-smart__field {
-  font-size: inherit;
+  font-size: var(--this-font-size);
   position: absolute;
-  left: 1em;
-  top: 0.75em;
-  width: var(--icon-size);
-  height: var(--icon-size);
+  left: var(--this-padding-inline);
+  top: var(--this-padding-block);
+  width: var(--this-icon-size);
+  height: var(--this-icon-size);
   margin: 0;
 
-  .checkbox-smart._waiting & {
+  .checkbox-smart--waiting & {
     display: none;
   }
 }
 
 .checkbox-smart__icon {
   position: relative;
-  width: var(--icon-size);
-  height: var(--icon-size);
+  width: var(--this-icon-size);
+  height: var(--this-icon-size);
   flex-shrink: 0;
   display: flex;
   align-items: center;
   justify-content: center;
   color: white;
-  background-color: var(--icon-background-color);
+  background-color: var(--unchecked-icon-background-color);
   background-position: center;
   background-size: 50%;
   background-repeat: no-repeat;
-  border: 1.5px solid var(--icon-border-color);
+  border: 1.5px solid var(--unchecked-icon-border-color);
   border-radius: 3px;
   cursor: pointer;
 
-  /* default state */
-
-  .checkbox-smart:not(._disabled):hover & {
-    --icon-background-color: var(--color-first-trans-90);
-    --icon-border-color: var(--color-first);
-
-    &._color-grey {
-      --icon-background-color: var(--color-grey-trans-90);
-      --icon-border-color: var(--color-grey);
-    }
-
-    &._color-second {
-      --icon-background-color: var(--color-second-trans-90);
-      --icon-border-color: var(--color-second);
-    }
-
-    &._color-third {
-      --icon-background-color: var(--color-third-trans-90);
-      --icon-border-color: var(--color-third);
-    }
-
-    &._color-success {
-      --icon-background-color: var(--color-success-trans-90);
-      --icon-border-color: var(--color-success);
-    }
-
-    &._color-error {
-      --icon-background-color: var(--color-error-trans-90);
-      --icon-border-color: var(--color-error);
-    }
+  .checkbox-smart:hover & {
+    background-color: var(--unchecked-hover-icon-background-color);
+    border-color: var(--unchecked-hover-icon-border-color);
   }
 
-  .checkbox-smart:not(._disabled):active & {
-    --icon-background-color: var(--color-first-trans-80);
-    --icon-border-color: var(--color-first);
-
-    &._color-grey {
-      --icon-background-color: var(--color-grey-trans-80);
-      --icon-border-color: var(--color-grey);
-    }
-
-    &._color-second {
-      --icon-background-color: var(--color-second-trans-80);
-      --icon-border-color: var(--color-second);
-    }
-
-    &._color-third {
-      --icon-background-color: var(--color-third-trans-80);
-      --icon-border-color: var(--color-third);
-    }
-
-    &._color-success {
-      --icon-background-color: var(--color-success-trans-80);
-      --icon-border-color: var(--color-success);
-    }
-
-    &._color-error {
-      --icon-background-color: var(--color-error-trans-80);
-      --icon-border-color: var(--color-error);
-    }
+  .checkbox-smart:active & {
+    background-color: var(--unchecked-active-icon-background-color);
+    border-color: var(--unchecked-active-icon-border-color);
   }
 
-  /* checked state */
-
-  .checkbox-smart._checked & {
-    --icon-background-color: var(--color-first);
-    --icon-border-color: transparent;
+  .checkbox-smart--checked & {
+    background-color: var(--checked-icon-background-color);
+    border-color: var(--checked-icon-border-color);
 
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='white' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
-
-    &._color-grey {
-      --icon-background-color: var(--color-grey);
-    }
-
-    &._color-second {
-      --icon-background-color: var(--color-second);
-    }
-
-    &._color-third {
-      --icon-background-color: var(--color-third);
-    }
-
-    &._color-success {
-      --icon-background-color: var(--color-success);
-    }
-
-    &._color-error {
-      --icon-background-color: var(--color-error);
-    }
   }
 
-  .checkbox-smart._checked:not(._disabled):hover & {
-    --icon-background-color: var(--color-first-trans-10);
-
-    &._color-grey {
-      --icon-background-color: var(--color-grey-trans-10);
-    }
-
-    &._color-second {
-      --icon-background-color: var(--color-second-trans-10);
-    }
-
-    &._color-third {
-      --icon-background-color: var(--color-third-trans-10);
-    }
-
-    &._color-success {
-      --icon-background-color: var(--color-success-trans-10);
-    }
-
-    &._color-error {
-      --icon-background-color: var(--color-error-trans-10);
-    }
+  .checkbox-smart--checked:hover & {
+    background-color: var(--checked-hover-icon-background-color);
+    border-color: var(--checked-hover-icon-border-color);
   }
 
-  .checkbox-smart._checked:not(._disabled):active & {
-    --icon-background-color: var(--color-first-trans-20);
-
-    &._color-grey {
-      --icon-background-color: var(--color-grey-trans-20);
-    }
-
-    &._color-second {
-      --icon-background-color: var(--color-second-trans-20);
-    }
-
-    &._color-third {
-      --icon-background-color: var(--color-third-trans-20);
-    }
-
-    &._color-success {
-      --icon-background-color: var(--color-success-trans-20);
-    }
-
-    &._color-error {
-      --icon-background-color: var(--color-error-trans-20);
-    }
+  .checkbox-smart--checked:active & {
+    background-color: var(--checked-active-icon-background-color);
+    border-color: var(--checked-active-icon-border-color);
   }
 
-  /* invalid state */
-
-  .checkbox-smart._invalid &,
-  .checkbox-smart._invalid:hover &,
-  .checkbox-smart._invalid:active & {
-    --icon-border-color: var(--color-error);
+  .checkbox-smart--invalid & {
+    --unchecked-icon-border-color: var(--color-error);
+    --unchecked-hover-icon-border-color: var(--color-error);
+    --unchecked-active-icon-border-color: var(--color-error);
+    --checked-icon-border-color: var(--color-error);
+    --checked-hover-icon-border-color: var(--color-error);
+    --checked-active-icon-border-color: var(--color-error);
   }
 }
 
 .checkbox-smart__spinner {
   stroke-width: 2.5;
   animation: checkbox-spinner 1.5s infinite;
-  color: var(--color-first);
-  width: var(--icon-size);
+  color: var(--this-spinner-color);
+  width: var(--this-icon-size);
 }
 
 .checkbox-smart__body {
@@ -284,10 +162,8 @@
 }
 
 .checkbox-smart__title {
-  font-size: inherit;
   font-family: var(--font-family-title);
   font-weight: var(--font-weight-semibold);
-  color: currentColor;
 }
 
 .checkbox-smart__caption {
@@ -296,4 +172,144 @@
   font-family: var(--font-family-base);
   font-weight: var(--font-weight-regular);
   line-height: 1.3;
+}
+
+/* Размеры */
+
+.checkbox-smart--micro {
+  --this-font-size: var(--font-size-micro);
+}
+
+.checkbox-smart--small {
+  --this-font-size: var(--font-size-small);
+}
+
+.checkbox-smart--large {
+  --this-font-size: var(--font-size-large);
+}
+
+.checkbox-smart--extra {
+  --this-font-size: var(--font-size-extra);
+}
+
+/* Цвета */
+
+.checkbox-smart--grey {
+  --this-spinner-color: var(--color-grey);
+  --checked-border-color: var(--color-grey);
+
+  --unchecked-hover-icon-background-color: var(--color-grey-trans-90);
+  --unchecked-hover-icon-border-color: var(--color-grey);
+
+  --unchecked-active-icon-background-color: var(--color-grey-trans-80);
+  --unchecked-active-icon-border-color: var(--color-grey);
+
+  --checked-icon-background-color: var(--color-grey);
+  --checked-icon-border-color: var(--color-grey);
+
+  --checked-hover-icon-background-color: var(--color-grey-trans-10);
+  --checked-hover-icon-border-color: var(--color-grey);
+
+  --checked-active-icon-background-color: var(--color-grey-trans-20);
+  --checked-active-icon-border-color: var(--color-grey);
+}
+
+.checkbox-smart--first {
+  --this-spinner-color: var(--color-first);
+  --checked-border-color: var(--color-first);
+
+  --unchecked-hover-icon-background-color: var(--color-first-trans-90);
+  --unchecked-hover-icon-border-color: var(--color-first);
+
+  --unchecked-active-icon-background-color: var(--color-first-trans-80);
+  --unchecked-active-icon-border-color: var(--color-first);
+
+  --checked-icon-background-color: var(--color-first);
+  --checked-icon-border-color: var(--color-first);
+
+  --checked-hover-icon-background-color: var(--color-first-trans-10);
+  --checked-hover-icon-border-color: var(--color-first);
+
+  --checked-active-icon-background-color: var(--color-first-trans-20);
+  --checked-active-icon-border-color: var(--color-first);
+}
+
+.checkbox-smart--second {
+  --this-spinner-color: var(--color-second);
+  --checked-border-color: var(--color-second);
+
+  --unchecked-hover-icon-background-color: var(--color-second-trans-90);
+  --unchecked-hover-icon-border-color: var(--color-second);
+
+  --unchecked-active-icon-background-color: var(--color-second-trans-80);
+  --unchecked-active-icon-border-color: var(--color-second);
+
+  --checked-icon-background-color: var(--color-second);
+  --checked-icon-border-color: var(--color-second);
+
+  --checked-hover-icon-background-color: var(--color-second-trans-10);
+  --checked-hover-icon-border-color: var(--color-second);
+
+  --checked-active-icon-background-color: var(--color-second-trans-20);
+  --checked-active-icon-border-color: var(--color-second);
+}
+
+.checkbox-smart--third {
+  --this-spinner-color: var(--color-third);
+  --checked-border-color: var(--color-third);
+
+  --unchecked-hover-icon-background-color: var(--color-third-trans-90);
+  --unchecked-hover-icon-border-color: var(--color-third);
+
+  --unchecked-active-icon-background-color: var(--color-third-trans-80);
+  --unchecked-active-icon-border-color: var(--color-third);
+
+  --checked-icon-background-color: var(--color-third);
+  --checked-icon-border-color: var(--color-third);
+
+  --checked-hover-icon-background-color: var(--color-third-trans-10);
+  --checked-hover-icon-border-color: var(--color-third);
+
+  --checked-active-icon-background-color: var(--color-third-trans-20);
+  --checked-active-icon-border-color: var(--color-third);
+}
+
+.checkbox-smart--success {
+  --this-spinner-color: var(--color-success);
+  --checked-border-color: var(--color-success);
+
+  --unchecked-hover-icon-background-color: var(--color-success-trans-90);
+  --unchecked-hover-icon-border-color: var(--color-success);
+
+  --unchecked-active-icon-background-color: var(--color-success-trans-80);
+  --unchecked-active-icon-border-color: var(--color-success);
+
+  --checked-icon-background-color: var(--color-success);
+  --checked-icon-border-color: var(--color-success);
+
+  --checked-hover-icon-background-color: var(--color-success-trans-10);
+  --checked-hover-icon-border-color: var(--color-success);
+
+  --checked-active-icon-background-color: var(--color-success-trans-20);
+  --checked-active-icon-border-color: var(--color-success);
+}
+
+.checkbox-smart--error {
+  --this-spinner-color: var(--color-error);
+  --checked-border-color: var(--color-error);
+
+  --unchecked-hover-icon-background-color: var(--color-error-trans-90);
+  --unchecked-hover-icon-border-color: var(--color-error);
+
+  --unchecked-active-icon-background-color: var(--color-error-trans-80);
+  --unchecked-active-icon-border-color: var(--color-error);
+
+  --checked-icon-background-color: var(--color-error);
+  --checked-icon-border-color: var(--color-error);
+
+  --checked-hover-icon-background-color: var(--color-error-trans-10);
+  --checked-hover-icon-border-color: var(--color-error);
+
+  --checked-active-icon-background-color: var(--color-error-trans-20);
+  --checked-active-icon-border-color: var(--color-error);
 }
