--- a/src/elements/Input/styles/base.css
+++ b/src/elements/Input/styles/base.css
@@ -19,54 +19,72 @@
 }
 
 .input {
-  --feather-width: 18px;
+  --this-font-size: var(--control-font-size);
+  --this-padding-inline: var(--control-padding-inline);
+  --this-padding-block: var(--control-padding-block);
+  --this-border-width: var(--control-border-width);
+  --this-border-radius: var(--control-border-radius);
+
+  --this-icon-size: 18px;
+  --this-icon-color: var(--control-text-color);
+
+  --this-text-color: var(--control-text-color);
+  --this-background-color: var(--control-background-color);
+  --this-border-color: var(--control-border-color);
+
+  --this-hover-text-color: var(--control-hover-text-color);
+  --this-hover-background-color: var(--control-hover-background-color);
+  --this-hover-border-color: var(--control-hover-border-color);
+
+  --this-focus-text-color: var(--control-focus-text-color);
+  --this-focus-background-color: var(--control-focus-background-color);
+  --this-focus-border-color: var(--control-focus-border-color);
+
   position: relative;
   display: inline-flex;
+}
 
-  &._disabled {
-    opacity: 0.6;
-    pointer-events: none;
-  }
+.input--disabled {
+  opacity: 0.6;
+  pointer-events: none;
 }
 
 .input--micro {
-  --feather-width: 15px;
+  --this-icon-size: 15px;
 }
 
 .input--small {
-  --feather-width: 16px;
+  --this-icon-size: 16px;
 }
 
 .input--large {
-  --feather-width: 20px;
+  --this-icon-size: 20px;
 }
 
 .input--extra {
-  --feather-width: 20px;
+  --this-icon-size: 20px;
 }
 
 .input__field {
-  --background-color: var(--control-background-color);
-  --border-color: var(--control-border-color);
-  --text-color: var(--control-text-color);
-
   display: block;
   width: 100%;
 
   line-height: 1.3;
   font-family: var(--control-font-family);
   font-weight: var(--control-font-weight);
-  font-size: var(--control-font-size);
-  padding: var(--control-padding);
+  font-size: var(--this-font-size);
+  padding-inline: var(--this-padding-inline);
+  padding-block: var(--this-padding-block);
   border-style: solid;
-  border-width: var(--control-border-width);
-  border-radius: var(--control-border-radius);
+  border-width: var(--whis-border-width);
+  border-radius: var(--this-border-radius);
   transition: none;
   text-shadow: none;
+  outline-offset: 0;
 
-  color: var(--text-color);
-  background-color: var(--background-color);
-  border-color: var(--border-color);
+  color: var(--this-text-color);
+  background-color: var(--this-background-color);
+  border-color: var(--this-border-color);
 
   &::placeholder {
     color: var(--control-placeholder-color);
@@ -76,6 +94,7 @@
   &[type='number'] {
     /* убираем стрелки */
     -moz-appearance: textfield;
+    appearance: textfield;
 
     &::-webkit-outer-spin-button,
     &::-webkit-inner-spin-button {
@@ -84,179 +103,138 @@
     }
   }
 
-  .input--grey & {
-    --text-color: var(--color-grey);
-  }
-
-  .input--first & {
-    --text-color: var(--color-first);
-  }
-
-  .input--second & {
-    --text-color: var(--color-second);
-  }
-
-  .input--third & {
-    --text-color: var(--color-third);
-  }
-
-  .input--success & {
-    --text-color: var(--color-success);
-  }
-
-  .input--error & {
-    --text-color: var(--color-error);
-  }
-
   &:hover {
     outline: none;
-    --text-color: var(--control-hover-text-color);
-    --background-color: var(--control-hover-background-color);
-    --border-color: var(--control-hover-border-color);
-
-    .input--grey & {
-      --text-color: var(--color-grey);
-    }
-
-    .input--first & {
-      --text-color: var(--color-first);
-    }
-
-    .input--second & {
-      --text-color: var(--color-second);
-    }
-
-    .input--third & {
-      --text-color: var(--color-third);
-    }
-
-    .input--success & {
-      --text-color: var(--color-success);
-    }
-
-    .input--error & {
-      --text-color: var(--color-error);
-    }
+    color: var(--this-hover-text-color);
+    background-color: var(--this-hover-background-color);
+    border-color: var(--this-hover-border-color);
   }
 
   &:focus {
-    --text-color: var(--control-focus-text-color);
-    --background-color: var(--control-focus-background-color);
-    --border-color: var(--control-focus-border-color);
-    outline: 1px solid var(--border-color);
-    outline-offset: 0;
-
-    .input--grey & {
-      --text-color: var(--color-grey);
-      --border-color: var(--color-grey);
-    }
-
-    .input--first & {
-      --text-color: var(--color-first);
-      --border-color: var(--color-first);
-    }
-
-    .input--second & {
-      --text-color: var(--color-second);
-      --border-color: var(--color-second);
-    }
-
-    .input--third & {
-      --text-color: var(--color-third);
-      --border-color: var(--color-third);
-    }
-
-    .input--success & {
-      --text-color: var(--color-success);
-      --border-color: var(--color-success);
-    }
-
-    .input--error & {
-      --text-color: var(--color-error);
-      --border-color: var(--color-error);
-    }
+    outline: 1px solid var(--this-focus-border-color);
+    color: var(--this-focus-text-color);
+    background-color: var(--this-focus-background-color);
+    border-color: var(--this-focus-border-color);
   }
 
-  .input._invalid & {
-    --text-color: var(--control-invalid-text-color);
-    --background-color: var(--control-invalid-background-color);
-    --border-color: var(--control-invalid-border-color);
-  }
-
-  .input--micro & {
-    font-size: var(--control-micro-font-size);
-    padding: var(--control-micro-padding);
-    border-width: var(--control-micro-border-width);
-    border-radius: var(--control-micro-border-radius);
-  }
-
-  .input--small & {
-    font-size: var(--control-small-font-size);
-    padding: var(--control-small-padding);
-    border-width: var(--control-small-border-width);
-    border-radius: var(--control-small-border-radius);
-  }
-
-  .input--large & {
-    font-size: var(--control-large-font-size);
-    padding: var(--control-large-padding);
-    border-width: var(--control-large-border-width);
-    border-radius: var(--control-large-border-radius);
-  }
-
-  .input--extra & {
-    font-size: var(--control-extra-font-size);
-    padding: var(--control-extra-padding);
-    border-width: var(--control-extra-border-width);
-    border-radius: var(--control-extra-border-radius);
-  }
-
-  .input--has-feather & {
-    padding-left: calc(var(--feather-width) + 1em);
+  .input--with-icon & {
+    padding-left: calc(var(--this-icon-size) + 1em);
   }
 }
 
-.input__feather {
+.input__icon {
   position: absolute;
   left: 0.675em;
   top: 50%;
-  width: var(--feather-width);
-  margin-top: calc(-1 * var(--feather-width) / 2);
+  width: var(--this-icon-size);
+  margin-top: calc(-1 * var(--this-icon-size) / 2);
   opacity: 0.5;
   pointer-events: none;
+  color: var(--this-icon-color);
+}
 
-  &._spinner {
-    stroke-width: 2.5;
-    animation: input-spinner 1.5s infinite;
-  }
+.input__icon--spinner {
+  stroke-width: 2.5;
+  animation: input-spinner 1.5s infinite;
+}
 
-  .input._invalid & {
-    color: var(--color-error);
-  }
-
-  .input--first & {
-    color: var(--color-first);
-  }
-
-  .input--second & {
-    color: var(--color-second);
-  }
-
-  .input--third & {
-    color: var(--color-third);
-  }
-
-  .input--success & {
-    color: var(--color-success);
-  }
-
-  .input--error & {
-    color: var(--color-error);
+.input--waiting {
+  &:not(.input--with-icon) {
+    animation: input-waiting 1.5s linear infinite;
   }
 }
 
-.input._waiting {
-  &:not(.input--has-feather) {
-    animation: input-waiting 1.5s linear infinite;
-  }
+.input--micro {
+  --this-font-size: var(--control-micro-font-size);
+  --this-padding-inline: var(--control-micro-padding-inline);
+  --this-padding-block: var(--control-micro-padding-block);
+  --this-border-width: var(--control-micro-border-width);
+  --this-border-radius: var(--control-micro-border-radius);
+}
+
+.input--small {
+  --this-font-size: var(--control-small-font-size);
+  --this-padding-inline: var(--control-small-padding-inline);
+  --this-padding-block: var(--control-small-padding-block);
+  --this-border-width: var(--control-small-border-width);
+  --this-border-radius: var(--control-small-border-radius);
+}
+
+.input--large {
+  --this-font-size: var(--control-large-font-size);
+  --this-padding-inline: var(--control-large-padding-inline);
+  --this-padding-block: var(--control-large-padding-block);
+  --this-border-width: var(--control-large-border-width);
+  --this-border-radius: var(--control-large-border-radius);
+}
+
+.input--extra {
+  --this-font-size: var(--control-extra-font-size);
+  --this-padding-inline: var(--control-extra-padding-inline);
+  --this-padding-block: var(--control-extra-padding-block);
+  --this-border-width: var(--control-extra-border-width);
+  --this-border-radius: var(--control-extra-border-radius);
+}
+
+.input--grey {
+  --this-icon-color: var(--color-grey);
+  --this-text-color: var(--color-grey);
+  --this-hover-text-color: var(--color-grey);
+  --this-focus-text-color: var(--color-grey);
+  --this-focus-border-color: var(--color-grey);
+}
+
+.input--first {
+  --this-icon-color: var(--color-first);
+  --this-text-color: var(--color-first);
+  --this-hover-text-color: var(--color-first);
+  --this-focus-text-color: var(--color-first);
+  --this-focus-border-color: var(--color-first);
+}
+
+.input--second {
+  --this-icon-color: var(--color-second);
+  --this-text-color: var(--color-second);
+  --this-hover-text-color: var(--color-second);
+  --this-focus-text-color: var(--color-second);
+  --this-focus-border-color: var(--color-second);
+}
+
+.input--third {
+  --this-icon-color: var(--color-third);
+  --this-text-color: var(--color-third);
+  --this-hover-text-color: var(--color-third);
+  --this-focus-text-color: var(--color-third);
+  --this-focus-border-color: var(--color-third);
+}
+
+.input--success {
+  --this-icon-color: var(--color-success);
+  --this-text-color: var(--color-success);
+  --this-hover-text-color: var(--color-success);
+  --this-focus-text-color: var(--color-success);
+  --this-focus-border-color: var(--color-success);
+}
+
+.input--error {
+  --this-icon-color: var(--color-error);
+  --this-text-color: var(--color-error);
+  --this-hover-text-color: var(--color-error);
+  --this-focus-text-color: var(--color-error);
+  --this-focus-border-color: var(--color-error);
+}
+
+.input--invalid {
+  --this-icon-color: var(--color-error);
+  --this-text-color: var(--control-invalid-text-color);
+  --this-background-color: var(--control-invalid-background-color);
+  --this-border-color: var(--control-invalid-border-color);
+
+  --this-hover-text-color: var(--control-invalid-text-color);
+  --this-hover-background-color: var(--control-invalid-background-color);
+  --this-hover-border-color: var(--control-invalid-border-color);
+
+  --this-focus-text-color: var(--control-invalid-text-color);
+  --this-focus-background-color: var(--control-invalid-background-color);
+  --this-focus-border-color: var(--control-invalid-border-color);
 }
